# jschema

./: .gitmodules  CMakeLists.txt
include/: jsoncons.cmake  nlohmann_json.cmake
schema/: base.json  tracker.json
src/: main.cpp  scgen.h  schema.h  test.json
typegen/: deno.json  main.ts  quicktype.ts
